--- a/app/views/campaign_mailer/template1.text.erb
+++ b/app/views/campaign_mailer/template1.text.erb
@@ -18,5 +18,5 @@ Cheers,
 Mike
 
 
-This email was sent to <%= @lead.email %> If you do not want to see future emails from us, you can Unsubscribe From This List.
+This email was sent to <%= @lead.email %> If you do not want to see future emails from us, you can unsubscribe from this list by replying to us.
 Perspectivo.com - 214B East Commercial St. Springfield, MO 65803
