removed link from text template

--- a/app/views/campaign_mailer/template1.text.erb
+++ b/app/views/campaign_mailer/template1.text.erb
@@ -3,7 +3,7 @@ Hi <%= @lead.first_name %>,
 
 I’m Michael and I'm part of a small team launching Perspectivo.com, which is a site where you can post links to the best content on your site for free. Our site is for sharing your experience with others. You’re invited to our private beta:
 
-http://www.perspectivo.com
+perspectivo.com
 
 We’re only just getting started. Login and you’ll be able to grab your favorite user id (we’re so new that your first name might be available still). You can be the first to add content in your areas of interest.
 
