removed embedded link from template2

--- a/app/views/campaign_mailer/template2.text.erb
+++ b/app/views/campaign_mailer/template2.text.erb
@@ -4,7 +4,7 @@ I'm part of a small team launching a new website called Perspectivo. We want to 
 
 There’s even a way for you to easily add links onto things others have posted. How about taking a minute to link your content into our site? If you like the setup you could even post a few pointers yourself.
 
-I’d love to get you into our beta before we go live. To log in all you have to do is user your email address and create a username for yourself. You can take the site for a spin at www.perspectivo.com when you are prompted to enter your email address <%= @lead.email %> (be sure to input the one associated with this message)!
+I’d love to get you into our beta before we go live. To log in all you have to do is user your email address and create a username for yourself. You can take the site for a spin at perspectivo.com when you are prompted to enter your email address <%= @lead.email %> (be sure to input the one associated with this message)!
 
 Kind Regards,
 
