added template 4 and footer to templates for mailjet

--- a/app/views/campaign_mailer/template2.text.erb
+++ b/app/views/campaign_mailer/template2.text.erb
@@ -9,3 +9,6 @@ I’d love to get you into our beta before we go live. To log in all you have to
 Kind Regards,
 
 Michael
+
+This email was sent to <%= @lead.email %> If you do not want to see future emails from us, you can unsubscribe from this list [[UNSUB_LINK_EN]].
+Perspectivo.com - 214B East Commercial St. Springfield, MO 65803
