--- a/app/views/campaign_mailer/template4.text.erb
+++ b/app/views/campaign_mailer/template4.text.erb
@@ -1,7 +1,7 @@
 
 Hi <%= @lead.first_name %>,
 
-I’m Michael and I'm part of a small team launching Perspectivo.com, which is a site where you can post links to the best content on your site for free. Our site is for sharing your experience with others. You’re invited to our private beta:
+I’m Michael and I'm part of a small team launching Perspectivo. It is a site where you share your experience and when you do, you can post links to the best content on your site for free. You’re invited to our private beta:
 
 perspectivo.com
 
@@ -16,6 +16,7 @@ Please check us out. It'll literally take only a minute to visit the site and ad
 Cheers,
 
 Mike
+
 
 This email was sent to <%= @lead.email %> If you do not want to see future emails from us, you can unsubscribe from this list [[UNSUB_LINK_EN]].
 Perspectivo.com - 214B East Commercial St. Springfield, MO 65803
