--- a/app/views/campaign_mailer/template3.text.erb
+++ b/app/views/campaign_mailer/template3.text.erb
@@ -14,3 +14,6 @@ I look forward to hearing from you.
 Cheers,
 
 Michael
+
+This email was sent to <%= @lead.email %> If you do not want to see future emails from us, you can unsubscribe from this list [[UNSUB_LINK_EN]].
+Perspectivo.com - 214B East Commercial St. Springfield, MO 65803
