removed unsubscribe link from footer to work with mailgun

--- a/app/views/campaign_mailer/template5.text.erb
+++ b/app/views/campaign_mailer/template5.text.erb
@@ -16,5 +16,5 @@ Cheers,
 Mike
 
 
-This email was sent to <%= @lead.email %> If you do not want to see future emails from us, you can unsubscribe from this list [[UNSUB_LINK_EN]].
+This email was sent to <%= @lead.email %> If you do not want to see future emails from us, you can unsubscribe from this list by replying to this email.
 Perspectivo.com - 214B East Commercial St. Springfield, MO 65803
