--- a/app/views/campaign_mailer/template6.html.erb
+++ b/app/views/campaign_mailer/template6.html.erb
@@ -20,6 +20,6 @@
   <br></p>
 
 
-This email was sent to <%= @lead.email %> If you do not want to see future emails from us, you can <a href="[[UNSUB_LINK_EN]]">unsubscribe</a> from this list .
+This email was sent to <%= @lead.email %> If you do not want to see future emails from us, you can unsubscribe from this list by replying to this email.
 <br>
 Perspectivo.com - 214B East Commercial St. Springfield, MO 65803
