added template 7 and 8

--- a/app/views/campaign_mailer/template6.html.erb
+++ b/app/views/campaign_mailer/template6.html.erb
@@ -14,12 +14,11 @@
   I look forward to hearing from you.
   <br><br>
   Cheers,
-  <br></p>
+  <br><br>
   Michael
 
   <br></p>
 
 
-This email was sent to <%= @lead.email %> If you do not want to see future emails from us, you can unsubscribe from this list by replying to this email.
-<br>
-Perspectivo.com - 214B East Commercial St. Springfield, MO 65803
+This email was sent to <%= @lead.email %>.
+
