--- a/app/views/campaign_mailer/template6.text.erb
+++ b/app/views/campaign_mailer/template6.text.erb
@@ -18,5 +18,4 @@ Cheers,
 Michael
 
 
-This email was sent to <%= @lead.email %> If you do not want to see future emails from us, you can unsubscribe from this list by replying to this email.
-Perspectivo.com - 214B East Commercial St. Springfield, MO 65803
+This email was sent to <%= @lead.email %>.
