--- a/app/views/campaign_mailer/template7L.text.erb
+++ b/app/views/campaign_mailer/template7L.text.erb
@@ -1,7 +1,7 @@
 
 Hi <%= @lead.first_name %>,
 
-My name is Michael and I’m part of a new startup called Perspectivo [dot] com. This is an invite to check out our private beta site. We have been searching for people with interesting content online and we decided to reach out to you. We’ll only email you this one time.
+My name is Michael and I’m part of a new startup called Perspectivo.com. This is an invite to check out our private beta site. We have been searching for people with interesting content online and we decided to reach out to you. We’ll only email you this one time.
 
 Perspectivo is a new kind of idea for the internet. We are gathering the perspectives of people all around the World.
 
@@ -15,6 +15,4 @@ Cheers,
 
 Michael
 
-
 This email was sent to <%= @lead.email %>.
-
