--- a/app/views/campaign_mailer/template8L.text.erb
+++ b/app/views/campaign_mailer/template8L.text.erb
@@ -5,11 +5,11 @@ My name is Michael and I represent Perspectivo - a cool new startup that's about
 
 At Perspectivo we aren’t looking for facts and data – that's easy to find today; we're targeting people's' hard-earned experience which is highly valuable to those who face unfamiliar problems or new opportunities.
 
-In our vision Perspectivo will be a place for people to discover new possibilities and solutions to any dream, goal or challenge they are having based on the experience and wisdom of those who have “Been There, Done That.”
+In our vision Perspectivo will be a place for people to discover new possibilities and solutions to any dream, goal or challenge they are having - based on other’s experience.
 
 At this stage, Perspectivo is only open to a selected few, but down the line, it will be open to the world. The advantage of being an early participant is that you will receive a head start in gaining recognition and targeted traffic as the site gains popularity. But equally important is the fact that you will help others who will put your experience to good use.
 
-If you're interested, you can simply use your email address and log in to Perspectivo[dot]com which is currently an invite-only site.
+If you're interested, you can simply use your email address and log in to Perspectivo.com which is currently an invite-only site.
 
 I look forward to hearing from you.
 
