--- a/app/views/campaign_mailer/template8LS2.text.erb
+++ b/app/views/campaign_mailer/template8LS2.text.erb
@@ -1,11 +1,11 @@
 
 Hi <%= @lead.first_name %>,
 
-My name is Michael and I represent Perspectivo - a cool new startup that's about to bring something different to the masses – access to other's experience. We have been searching for people with interesting content online and we decided to reach out to you. We’ll only email you this one time.
+My name is Michael and I represent Perspectivo - a cool new startup that's about to bring something different to the masses – access to other's experience. We have been searching for people with interesting content online and we decided to reach out to you. We'll only email you this one time.
 
-At Perspectivo we aren’t looking for facts and data – that's easy to find today; we're targeting people's' hard-earned experience which is highly valuable to those who face unfamiliar problems or new opportunities.
+At Perspectivo we aren't looking for facts and data – that's easy to find today; we're targeting peoples' hard-earned experience which is highly valuable to those who face unfamiliar problems or new opportunities.
 
-In our vision Perspectivo will be a place for people to discover new possibilities and solutions to any dream, goal or challenge they are having - based on other’s experience.
+In our vision Perspectivo will be a place for people to discover new possibilities and solutions to any dream, goal or challenge they are having - based on others experience.
 
 At this stage, Perspectivo is only open to a selected few, but down the line, it will be open to the world. The advantage of being an early participant is that you will receive a head start in gaining recognition and targeted traffic as the site gains popularity. But equally important is the fact that you will help others who will put your experience to good use.
 
